--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane_de.properties
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane_de.properties
@@ -1,2 +1,2 @@
 moreWorkersIndicatorLabel.textFormat=({0,number,integer} mehr...)
-cancelButton.tooltip=Klicken um die Aufgabe abzubrechen
+cancelButton.tooltip=Klicken um den Task abzubrechen
